Fix Hugo icon alignment in footer

--- a/src/scss/layout/_site.scss
+++ b/src/scss/layout/_site.scss
@@ -169,4 +169,8 @@
   &__hugo-logo {
     vertical-align: middle;
   }
+
+  a > img {
+    display: inline-block;
+  }
 }
